    - 'cursor.address' is removed from the API
    - `cursor.rewind()` returns None, mutates cursor in-place
    - removed 'cursor.distinct()': use the  corresponding collection(/table) method.
    - removed 'CursorIsStartedException': now `CursorException` raised for all state-related illegal calls
    - Cursors' state described by the `CursorState` enum
(internal) simplified timeout management classes and representations.
(internal) Async/Collection's find_one method uses findOne API command.
Removed the CommandCursor/AsyncCommandCursor classes:
    - AstraDBAdmin's `list_databases`, `async_list_databases` methods return regular lists
    - Database's `list_collections`, `list_tables` methods return regular lists
    - AsyncDatabase's `list_collections`, `list_tables` methods have become awaitable and return regular lists
Remove 'check_exists' from [Async]Database `create_collection` method (always False now)
    - Remove 'CollectionNotFoundException', replaced by a ValueError in the few cases it's needed
Remove `CollectionAlreadyExistsException` class (not used anymore without `check_exists`)
Rename 'DevOpsAPIFaultyResponseException' to `UnexpectedDevOpsAPIResponseException`
Rename 'DataAPIFaultyResponseException' to `UnexpectedDataAPIResponseException`
Signature change from `-> {"ok": 1}` to `-> None` for some admin and schema methods:
    - AstraDBAdmin: `drop_database` (+ async)
    - AstraDBDatabaseAdmin, DataAPIDatabaseAdmin: `create_keyspace`, `drop_keyspace`, `drop` (+ async)
    - Database, AsyncDatabase: `drop_collection`, `drop_table`
    - Collection, AsyncCollection: `drop`
Support for arbitrary 'database' and 'admin' headers throughout the object chain
Rename `CollectionVectorServiceOptions` class to `VectorServiceOptions`
Removed "raw_options" attribute from CollectionOptions class (redundant w.r.t `CollectionDescriptor.raw_descriptor`)
Reworked the options system:
    - an APIOptions object inherited at each "spawn" operation, with overrides